--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ function tagLunarCal( d, i, w, k, m1, m2, m3, m4, m5, m6, m7, m8, m9, m10, m11, 
                   <use xlink:href="#icon-yepian"></use>
                 </svg><span>菜鸟教程</span></a></li>
 
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="http://c.biancheng.net/sitemap/ target="_blank"><svg
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="http://c.biancheng.net/sitemap/" target="_blank"><svg
                   class="icon" aria-hidden="true">
                   <use xlink:href="#icon-hulianwang-hover"></use>
                 </svg><span>C语言中文网</span></a></li>
