--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://liupaopao.top" target="_blant">my-blog2</a>
+                    <a class="nav-link" href="https://hanxuliu.github.io/myblog-butterfly/" target="_blant">my-blog2</a>
                 </li>
 				
 				<li class="nav-item active">
@@ -405,7 +405,7 @@ function tagLunarCal( d, i, w, k, m1, m2, m3, m4, m5, m6, m7, m8, m9, m10, m11, 
                   <use xlink:href="#icon-bianjiqi-"></use>
                 </svg><span>my-blog1</span></a></li>
 
-            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://liupaopao.top" target="_blank"><svg
+            <li class="col-3 col-sm-3 col-md-3 col-lg-1"><a rel="nofollow" href="https://hanxuliu.github.io/myblog-butterfly/" target="_blank"><svg
                   class="icon" aria-hidden="true">
                   <use xlink:href="#icon-bianjiqi-"></use>
                 </svg><span>my-blog2</span></a></li>
