update myblog2 url

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://hanxuliu.github.io/myblog-butterfly/" target="_blant">my-blog2</a>
+                    <a class="nav-link" href="https://liu-hanxu.github.io/" target="_blant">my-blog2</a>
                 </li>
 				
 				<li class="nav-item active">
