--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- 响应式设计视口设置，让页面在不同设备上正确显示 -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- 页面标题，显示在浏览器标签上 -->
-        <title>个人简历 - 张三</title>
+        <title>刘汉旭 - 个人简历</title>
         <!-- 引入 Font Awesome 图标库，用于展示各种图标 -->
         <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
         <!-- 自定义样式，使用内联样式表 -->
