add project description

--- a/index.html
+++ b/index.html
@@ -768,13 +768,6 @@
 								<li>担任班长、辅导员助理</li>
 							</ul>
                         </div>
-
-                        <div class="timeline-item">
-                            <div class="timeline-date">2021</div>
-                            <h3 class="timeline-title">计算机技术与软件专业技术资格</h3>
-                            <p>软件设计师（中级）认证</p>
-							<p>程序员（初级）认证</p>
-                        </div>
                     </div>
                 </div>
 
@@ -784,12 +777,12 @@
                     <div class="timeline">
                         <div class="timeline-item">
                             <div class="timeline-date">2020.6 - 至今</div>
-                            <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管</h3>
+                            <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管 (语言编译研发部、信息系统事业部)</h3>
                             <ul class="custom-list">
-								<li> 一作论文《国产平台软件调试技术》
-								<li>已授权专利《硬件观察点》</li>
+								<li>已发表论文《国产平台软件调试技术》(一作)
+								<li>已授权专利《硬件观察点》</li> (第一发明人)
 								<li>软著《申威LLDB软件》</li>
-								<li>计算机技术与软件专业技术资格：软件设计师（中级）认证、程序员（初级）认证</li>
+								<li>计算机技术与软件专业技术资格：软件设计师（中级）认证</li>
 							</ul>
                         </div>
                     </div>
@@ -816,11 +809,18 @@
 
                 <!-- 实习经历卡片模块 -->
                 <div class="card" id="info-card">
-                    <h2 class="card-title">实习经历</h2>
+                    <h2 class="card-title">项目经历</h2>
                     <div class="info-item">
-                        <h3 class="info-title">软件开发实习生</h3>
-                        <p class="info-date">2022年6月 - 2022年8月</p>
-                        <p class="info-description">在XX科技有限公司实习，负责参与开发公司内部管理系统，主要负责前端页面的设计与实现，提升了实际项目开发能力。</p>
+                        <h3 class="info-title">自主微架构服务器处理器研发项目</h3>
+                        <p class="info-date">2021年12月 - 2024年12月</p>
+                        <p class="info-description">项目目标是打破win+intel垄断，实现一套自主架构处理器平台进行国产化替代。项目共6个子课题，本人负责课题6《面向自主架构的开发支撑技术》核心研发工作，在自主指令集架构SW64（RISC）平台，从零实现gdb、lldb、delve三大调试器架构支持，已被阿里、统信、等十几家合作厂商广泛使用，并开源至申威开源社区，输出技术文档十余篇。
+在XX科技有限公司实习，负责参与开发公司内部管理系统，主要负责前端页面的设计与实现，提升了实际项目开发能力。</p>
+			链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
+			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10057 class="break-link">LLDB</a>
+			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10062 class="break-link">Delve</a>
+			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10026 class="break-link">Libunwind</a>
+			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10069 class="break-link">SystemTap</a>
+			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=1881172391760572417 class="break-link">Ltrace</a>
                     </div>
                     <div class="info-item">
                         <h3 class="info-title">数据分析实习生</h3>
