upload some imgs

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 <div class="profile-card">
                     <div class="avatar-container">
                         <!-- 头像 -->
-                        <img src="./pic.webp" alt="个人头像" class="avatar">
+                        <img src="./img/pic.webp" alt="个人头像" class="avatar">
                         <!-- 姓名 -->
                         <h1 class="name">刘汉旭</h1>
                         <!-- 英文名 -->
@@ -778,12 +778,13 @@
                         <div class="timeline-item">
                             <div class="timeline-date">2020.6 - 至今</div>
                             <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管 (语言编译研发部、信息系统事业部)</h3>
+                            <br><h4 class="timeline-title">担任技术骨干，带领新人</h4><br>
                             <ul class="custom-list">
-								<li>已发表论文《国产平台软件调试技术》(一作)
-								<li>已授权专利《硬件观察点》</li> (第一发明人)
-								<li>软著《申威LLDB软件》</li>
-								<li>计算机技术与软件专业技术资格：软件设计师（中级）认证</li>
-							</ul>
+							<li>1篇论文《面向申威平台的反向调试技术研究》</li>
+							<li>3篇专利《一种硬件支持的观察点调试方法》、《一种程序调试方法》、《一种基于申威架构的线程并行程序性能分析方法及系统》</li>
+							<li>2篇软著《申威LLDB调试器软件》、《申威Systemtap跟踪和探测工具软件》</li>
+							<li>计算机技术与软件专业技术资格：软件设计师（中级）认证</li>
+				</ul>
                         </div>
                     </div>
                 </div>
@@ -815,7 +816,7 @@
                         <p class="info-date">2021年12月 - 2024年12月</p>
                         <p class="info-description">项目目标是打破win+intel垄断，实现一套自主架构处理器平台进行国产化替代。项目共6个子课题，本人负责课题6《面向自主架构的开发支撑技术》核心研发工作，在自主指令集架构SW64（RISC）平台，从零实现gdb、lldb、delve三大调试器架构支持，已被阿里、统信、等十几家合作厂商广泛使用，并开源至申威开源社区，输出技术文档十余篇。
 在XX科技有限公司实习，负责参与开发公司内部管理系统，主要负责前端页面的设计与实现，提升了实际项目开发能力。</p>
-			链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
+			开源社区链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
 			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10057 class="break-link">LLDB</a>
 			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10062 class="break-link">Delve</a>
 			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10026 class="break-link">Libunwind</a>
@@ -842,8 +843,11 @@
                     <h2 class="card-title">证书展示</h2>
                     <div class="certificate-scroll">
                         <div class="certificate-container">
-                            <img src="https://dummyimage.com/220x160/008080/ffffff&text=风景1" alt="证书" class="certificate-img" loading="lazy">
-                            <img src="https://dummyimage.com/220x160/008B8B/ffffff&text=风景2" alt="证书" class="certificate-img" loading="lazy">
+                            <img src="./img/patent.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
+                            <img src="./img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
+                            <img src="./img/speech.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
+                            <img src="./img/zhiyuan.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
                             <img src="https://dummyimage.com/220x160/009696/ffffff&text=风景3" alt="证书" class="certificate-img" loading="lazy">
                             <img src="https://dummyimage.com/220x160/00A3A3/ffffff&text=风景4" alt="证书" class="certificate-img" loading="lazy">
                             <img src="https://dummyimage.com/220x160/00B0B0/ffffff&text=风景5" alt="证书" class="certificate-img" loading="lazy">
