modify url of paper

--- a/index.html
+++ b/index.html
@@ -746,12 +746,12 @@
 							<ul class="custom-list">
 								<li> SCI论文《车联网中强化学习算法设计》
 									<br>发表在期刊《IEEE Internet of Things Journal》
-									<br>链接：<a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
+									<a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
 									https://ieeexplore.ieee.org/document/8896964 </a>
 								</li>
 								<li> SCI论文《用户移动轨迹保护方案设计》
 									<br>发表在期刊《Electronics》
-									<br>链接：<a href=https://doi.org/10.3390/electronics8020148 class="break-link">
+									<a href=https://doi.org/10.3390/electronics8020148 class="break-link">
 									https://doi.org/10.3390/electronics8020148</a>
 								</li>
 								<li>江南大学优秀研究生、江南大学一等奖学金、担任班干部</li>
@@ -780,6 +780,7 @@
                             <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管 (语言编译研发部、信息系统事业部)</h3>
                             <br><h4 class="timeline-title">担任技术骨干，带领新人</h4><br>
                             <ul class="custom-list">
+							<li>申威AI芯片研发项目“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
 							<li>1篇论文《面向申威平台的反向调试技术研究》</li>
 							<li>3篇专利《一种硬件支持的观察点调试方法》、《一种程序调试方法》、《一种基于申威架构的线程并行程序性能分析方法及系统》</li>
 							<li>2篇软著《申威LLDB调试器软件》、《申威Systemtap跟踪和探测工具软件》</li>
