--- a/index.html
+++ b/index.html
@@ -744,12 +744,12 @@
                             <div class="timeline-date">2017.9 - 2020.6   研究生</div>
                             <h3 class="timeline-title">江南大学（双一流、211院校） - 电子与通信工程 - 排名前10%</h3>
 							<ul class="custom-list">
-								<li> SCI论文《车联网中强化学习算法设计》
+								<li> SCI论文《Delay-Sensitive Task Offloading in the 802.11p-Based Vehicular Fog Computing Systems》
 									<br>发表在期刊《IEEE Internet of Things Journal》
 									<a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
 									https://ieeexplore.ieee.org/document/8896964 </a>
 								</li>
-								<li> SCI论文《用户移动轨迹保护方案设计》
+								<li> SCI论文《Trajectory Protection Schemes Based on a Gravity Mobility Model in IoT》
 									<br>发表在期刊《Electronics》
 									<a href=https://doi.org/10.3390/electronics8020148 class="break-link">
 									https://doi.org/10.3390/electronics8020148</a>
@@ -773,12 +773,12 @@
 
                 <!-- 学科竞赛卡片 -->
                 <div class="card" id="competition-card">
-                    <h2 class="card-title">工作经历</h2>
+                    <h2 class="card-title">工作经历和成果</h2>
                     <div class="timeline">
                         <div class="timeline-item">
                             <div class="timeline-date">2020.6 - 至今</div>
                             <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管 (语言编译研发部、信息系统事业部)</h3>
-                            <br><h4 class="timeline-title">担任技术骨干，带领新人</h4><br>
+                            <br><h4 class="timeline-title">担任技术骨干，带领新人,累计向申威社区、厂商、同事提供调试技术支持60+次，解决开发者用户遇到的调试难题80+项</h4><br>
                             <ul class="custom-list">
 							<li>申威AI芯片研发项目“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
 							<li>1篇论文《面向申威平台的反向调试技术研究》</li>
