--- a/index.html
+++ b/index.html
@@ -777,8 +777,8 @@
                     <div class="timeline">
                         <div class="timeline-item">
                             <div class="timeline-date">2020.6 - 至今</div>
-                            <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管 (语言编译研发部、信息系统事业部)</h3>
-                            <br><h4 class="timeline-title">担任技术骨干，带领新人,累计向申威社区、厂商、同事提供调试技术支持60+次，解决开发者用户遇到的调试难题80+项</h4><br>
+                            <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管</h3>
+                            <br><h4 class="timeline-title">语言编译研发部、信息系统事业部, 担任技术骨干，带领新人,累计向申威社区、厂商、同事提供调试技术支持60+次，解决开发者用户遇到的调试难题80+项</h4><br>
                             <ul class="custom-list">
 							<li>申威AI芯片研发项目“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
 							<li>1篇论文《面向申威平台的反向调试技术研究》</li>
@@ -813,11 +813,11 @@
                 <div class="card" id="info-card">
                     <h2 class="card-title">项目经历</h2>
                     <div class="info-item">
-                        <h3 class="info-title">自主微架构服务器处理器研发项目</h3>
+                        <h3 class="info-title">自主架构服务器芯片研发项目</h3>
                         <p class="info-date">2021年12月 - 2024年12月</p>
                         <p class="info-description">项目目标是打破win+intel垄断，实现一套自主架构处理器平台进行国产化替代。项目共6个子课题，本人负责课题6《面向自主架构的开发支撑技术》核心研发工作，在自主指令集架构SW64（RISC）平台，从零实现gdb、lldb、delve三大调试器架构支持，已被阿里、统信、等十几家合作厂商广泛使用，并开源至申威开源社区，输出技术文档十余篇。
 在XX科技有限公司实习，负责参与开发公司内部管理系统，主要负责前端页面的设计与实现，提升了实际项目开发能力。</p>
-			开源社区链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
+			开源链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
 			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10057 class="break-link">LLDB</a>
 			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10062 class="break-link">Delve</a>
 			<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10026 class="break-link">Libunwind</a>
@@ -844,18 +844,21 @@
                     <h2 class="card-title">证书展示</h2>
                     <div class="certificate-scroll">
                         <div class="certificate-container">
-                            <img src="./img/patent.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="./img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
                             <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
                             <img src="./img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
                             <img src="./img/speech.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
+                            <img src="./img/xianjin.webp" alt="先进个人领奖" class="certificate-img" loading="lazy">
+                            <img src="./img/jiangzuo1.webp" alt="讲座授课现场" class="certificate-img" loading="lazy">
+                            <img src="./img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
                             <img src="./img/zhiyuan.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
                             <img src="https://dummyimage.com/220x160/009696/ffffff&text=风景3" alt="证书" class="certificate-img" loading="lazy">
                             <img src="https://dummyimage.com/220x160/00A3A3/ffffff&text=风景4" alt="证书" class="certificate-img" loading="lazy">
                             <img src="https://dummyimage.com/220x160/00B0B0/ffffff&text=风景5" alt="证书" class="certificate-img" loading="lazy">
                             <!-- 重复图片实现无缝循环 -->
-                            <img src="https://dummyimage.com/220x160/008080/ffffff&text=风景1" alt="证书" class="certificate-img" loading="lazy">
-                            <img src="https://dummyimage.com/220x160/008B8B/ffffff&text=风景2" alt="证书" class="certificate-img" loading="lazy">
-                            <img src="https://dummyimage.com/220x160/009696/ffffff&text=风景3" alt="证书" class="certificate-img" loading="lazy">
+                            <img src="./img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
+                            <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
+                            <img src="./img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
                         </div>
                     </div>
                 </div>
