add new honor imgs

--- a/index.html
+++ b/index.html
@@ -844,18 +844,20 @@
                     <h2 class="card-title">证书展示</h2>
                     <div class="certificate-scroll">
                         <div class="certificate-container">
+                            <img src="./img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
                             <img src="./img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
                             <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
                             <img src="./img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
                             <img src="./img/speech.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
                             <img src="./img/xianjin.webp" alt="先进个人领奖" class="certificate-img" loading="lazy">
                             <img src="./img/jiangzuo1.webp" alt="讲座授课现场" class="certificate-img" loading="lazy">
-                            <img src="./img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="./img/school_xianjin.webp" alt="大学学习先进证书" class="certificate-img" loading="lazy">
+                            <img src="./img/school_ganbu.webp" alt="大学优秀干部证书" class="certificate-img" loading="lazy">
                             <img src="./img/zhiyuan.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
                             <!-- 重复图片实现无缝循环 -->
+                            <img src="./img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
                             <img src="./img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
                             <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
-                            <img src="./img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
                         </div>
                     </div>
                 </div>
