add new honor of school

--- a/index.html
+++ b/index.html
@@ -744,15 +744,13 @@
                             <div class="timeline-date">2017.9 - 2020.6   研究生</div>
                             <h3 class="timeline-title">江南大学（双一流、211院校） - 电子与通信工程 - 排名前10%</h3>
 							<ul class="custom-list">
-								<li> SCI论文《Delay-Sensitive Task Offloading in the 802.11p-Based Vehicular Fog Computing Systems》
+								<li> SCI论文 <a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
+									《Delay-Sensitive Task Offloading in the 802.11p-Based Vehicular Fog Computing Systems》</a>
 									<br>发表在期刊《IEEE Internet of Things Journal》
-									<a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
-									https://ieeexplore.ieee.org/document/8896964 </a>
 								</li>
-								<li> SCI论文《Trajectory Protection Schemes Based on a Gravity Mobility Model in IoT》
+								<li> SCI论文 <a href=https://doi.org/10.3390/electronics8020148 class="break-link">
+									《Trajectory Protection Schemes Based on a Gravity Mobility Model in IoT》</a>
 									<br>发表在期刊《Electronics》
-									<a href=https://doi.org/10.3390/electronics8020148 class="break-link">
-									https://doi.org/10.3390/electronics8020148</a>
 								</li>
 								<li>江南大学优秀研究生、江南大学一等奖学金、担任班干部</li>
 								<li>无锡马拉松志愿者、世界物联网博览会志愿者</li>
@@ -782,8 +780,8 @@
                             <ul class="custom-list">
 							<li>申威AI芯片研发项目“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
 							<li>1篇论文《面向申威平台的反向调试技术研究》</li>
-							<li>3篇专利《一种硬件支持的观察点调试方法》、《一种程序调试方法》、《一种基于申威架构的线程并行程序性能分析方法及系统》</li>
-							<li>2篇软著《申威LLDB调试器软件》、《申威Systemtap跟踪和探测工具软件》</li>
+							<li>3篇专利《一种硬件支持的观察点调试方法》《一种程序调试方法》《一种基于申威架构的线程并行程序性能分析方法及系统》</li>
+							<li>2篇软著《申威LLDB调试器软件》《申威Systemtap跟踪和探测工具软件》</li>
 							<li>计算机技术与软件专业技术资格：软件设计师（中级）认证</li>
 				</ul>
                         </div>
