--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                         <!-- 姓名 -->
                         <h1 class="name">刘汉旭</h1>
                         <!-- 英文名 -->
-                        <p class="english-name">Liu Hanxu</p>
+                        <p class="english-name">Stay hungry, Stay foolish. 热爱技术, 热爱生活!</p>
                     </div>
 
 					<div class="contact-scroll">
