--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 <div class="profile-card">
                     <div class="avatar-container">
                         <!-- 头像 -->
-                        <img src="./img/pic.webp" alt="个人头像" class="avatar">
+                        <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/pic.webp" alt="个人头像" class="avatar">
                         <!-- 姓名 -->
                         <h1 class="name">刘汉旭</h1>
                         <!-- 英文名 -->
@@ -742,7 +742,7 @@
                         <!-- 时间轴项 -->
                         <div class="timeline-item">
                             <div class="timeline-date">2017.9 - 2020.6   研究生</div>
-                            <h3 class="timeline-title">江南大学（双一流、211院校） - 电子与通信工程专业硕士 - 排名前10%</h3>
+                            <h3 class="timeline-title">江南大学（双一流、211） - 电子与通信工程专业硕士 - 排名前10%</h3>
 							<ul class="custom-list">
 								<li> SCI论文 <a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
 									《Delay-Sensitive Task Offloading in the 802.11p-Based Vehicular Fog Computing Systems》</a>
@@ -759,7 +759,7 @@
 
                         <div class="timeline-item">
                             <div class="timeline-date">2013.9 - 2017.6   本科</div>
-                            <h3 class="timeline-title">安徽建筑大学（一本院校） - 通信工程 - 排名前15%</h3>
+                            <h3 class="timeline-title">安徽建筑大学（一本） - 通信工程 - 排名前15%</h3>
 							<ul class="custom-list">
 								<li> 英语6级（495）、计算机三级数据库、计算机二级C语言</li>
 								<li>优秀学生干部、全校演讲比赛一等奖、国家一等助学金、学习进步先进个人、文体活动先进个人</li>
@@ -843,20 +843,20 @@
                     <h2 class="card-title">证书展示</h2>
                     <div class="certificate-scroll">
                         <div class="certificate-container">
-                            <img src="./img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
-                            <img src="./img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
-                            <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
-                            <img src="./img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
-                            <img src="./img/speech.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
-                            <img src="./img/xianjin.webp" alt="先进个人领奖" class="certificate-img" loading="lazy">
-                            <img src="./img/jiangzuo1.webp" alt="讲座授课现场" class="certificate-img" loading="lazy">
-                            <img src="./img/school_xianjin.webp" alt="大学学习先进证书" class="certificate-img" loading="lazy">
-                            <img src="./img/school_ganbu.webp" alt="大学优秀干部证书" class="certificate-img" loading="lazy">
-                            <img src="./img/zhiyuan.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/ruan_kao.webp" alt="软考证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/speech.webp" alt="演讲比赛证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/xianjin.webp" alt="先进个人领奖" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/jiangzuo1.webp" alt="讲座授课现场" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/school_xianjin.webp" alt="大学学习先进证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/school_ganbu.webp" alt="大学优秀干部证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/zhiyuan.webp" alt="志愿者证书" class="certificate-img" loading="lazy">
                             <!-- 重复图片实现无缝循环 -->
-                            <img src="./img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
-                            <img src="./img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
-                            <img src="./img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/patent_2.webp" alt="授权专利证书" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/A2.webp" alt="A2芯片攻关先锋奖杯" class="certificate-img" loading="lazy">
+                            <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/honor.webp" alt="优秀研究生证书" class="certificate-img" loading="lazy">
                         </div>
                     </div>
                 </div>
