add project experiences

--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                             <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管</h3>
                             <br><p class="info-description">先后在语言编译研发部(编译工具链研发工程师)、生态软件研发部(基础软件研发工程师)两个部门工作, 完成申威GDB反向调试(Reverse Debugging)高级功能开发, 使SW64成为第4个成功支持的架构(仅次于x86/arm/ppc); 完成申威LLDB框架设计和功能代码编写, 从零突破首次实现SW64架构支持; 充分挖掘CPU硬件特性, 实现LLDB硬件观察点功能，匹配速度提升数十倍. 突破“调试工具+大模型”技术融合探索，实现AI赋能工作效率. 完成申威插桩工具Dyninst、图形化调优工具HPCToolkit研发; 带领新人完成申威Systemtap、Ltrace工具开发. 累计开展3次以调试调优为主题的技术培训授课，分享软件调试技巧，提升同事软件开发效率. 累计向申威社区、厂商、部门内外同事提供调试技术支持60+次，解决开发者用户遇到的调试难题80+项. 实现了取得了从“职场小白->技术骨干->牵头骨干”的个人进步和成长. 目前正带领3人开展申威AI芯片研发项目攻关，完成芯片调试和性能计数器功能验证, 已实现面向AI卡的debugger和profiler代码雏形.</p><br>
                             <ul class="custom-list">
-                            <li>申威AI芯片研发项目“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
+                            <li>申威AI芯片“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
                             <li>1篇论文 <a href=https://hanxuliu.github.io/pdf-web/paper/gdb_reverse_debugging/index.html class="break-link">《面向申威平台的反向调试技术研究》</a></li>
                             <li>3篇专利<a href=https://hanxuliu.github.io/pdf-web/patent/lldb_hardware_watchpoint/index.html class="break-link">《一种硬件支持的观察点调试方法》</a>《一种程序调试方法》《一种基于申威架构的线程并行程序性能分析方法及系统》</li>
                             <li>2篇软著《申威LLDB调试器软件》《申威Systemtap跟踪和探测工具软件》</li>
@@ -789,7 +789,7 @@
                 </div>
 
                 <!-- 论文与项目卡片 -->
-                <div class="card" id="project-card">
+                <!--<div class="card" id="project-card">
                     <h2 class="card-title">论文与项目</h2>
                     <div class="timeline">
                         <div class="timeline-item">
@@ -805,11 +805,12 @@
                             <p>用户量超过5000+</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <!-- 实习经历卡片模块 -->
                 <div class="card" id="info-card">
                     <h2 class="card-title">项目经历</h2>
+
                     <div class="info-item">
                         <h3 class="info-title">自主架构服务器芯片研发项目</h3>
                         <p class="info-date">2021年12月 - 2024年12月</p>
@@ -823,11 +824,58 @@
                             <a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=1881172391760572417 class="break-link">Ltrace</a>
                         </p>
                     </div>
+
                     <div class="info-item">
-                        <h3 class="info-title">数据分析实习生</h3>
-                        <p class="info-date">2021年9月 - 2021年12月</p>
-                        <p class="info-description">在YY数据分析公司实习，负责收集和整理数据，进行数据分析和可视化展示，提升了数据分析能力。</p>
+                        <h3 class="info-title">申威AI芯片研发项目</h3>
+                        <p class="info-date">2025年6月 - 至今</p>
+                        <p class="info-description">项主要负责前端页面的设计与实现，提升了实际项目开发能力。
+                            <br>开源链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
+                            <a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10057 class="break-link">LLDB</a>
+                        </p>
                     </div>
+
+                    <div class="info-item">
+                        <h3 class="info-title">申威“生态+AI”融合创新项目</h3>
+                        <p class="info-date">2025年3月 - 2024年5月</p>
+                        <p class="info-description">独立负责研究探索申威平台开发者生态软件与大模型融合的可行方案，突破“调试器+大模型”技术融合壁垒，
+                            完成相关功能组件代码编写，在申威平台首次创新性实现将DeepSeek、ChatGPT等大模型接入Linux平台3大调试器(GDB/LLDB/Delve)中，
+                            并带领实习生实现将大模型接入内存分析工具Valgrind中，实现AI赋能基础工具软件，明显提升申威平台软件开发查错效率。
+                            <br>效果展示链接：<a href=https://developer.wxiat.cn class="break-link">GDB接入ChatGPT</a>
+                            <a href=https://developer.wxiat.cn class="break-link">LLDB接入DeepSeek</a>
+                            <a href=https://developer.wxiat.cn class="break-link">Valgrind接入DeepSeek</a>
+                        </p>
+                    </div>
+
+                    <div class="info-item">
+                        <h3 class="info-title">参与阿里数据工程项目攻关查错</h3>
+                        <p class="info-date">2021年9月 阿里云大数据适配coredump查错</p>
+                        <p class="info-description">在阿里数据工程适配项目中，出现boost协程库coredump问题。时值疫情严峻，逆流而上出差北京，展开持续29天的查错攻关，
+                            深挖出一系列申威底层特性相关错误，涉及编译器优化、上下文切换、寄存器配置等方面，解决阻碍项目进展2个多月的卡点。
+                            <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错攻关报告</a>
+                            <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
+                        </p>
+                    </div>
+
+                    <div class="info-item">
+                        <h3 class="info-title">参与天翼云项目紧急攻关查错</h3>
+                        <p class="info-date">2023年9月 天翼云VPP服务适配coredump查粗</p>
+                        <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，覆盖堆栈地址分配、共享地址非法覆写、
+                            memset内存操作的粒度等方面，保障项目追赶上计划进度。
+                            <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错记录</a>
+                            <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
+                        </p>
+                    </div>
+
+                    <div class="info-item">
+                        <h3 class="info-title">申威嵌入式芯片研发项目</h3>
+                        <p class="info-date">2023年9月 天翼云VPP服务适配coredump查粗</p>
+                        <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，覆盖堆栈地址分配、共享地址非法覆写、
+                            memset内存操作的粒度等方面，保障项目追赶上计划进度。
+                            <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错记录</a>
+                            <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
+                        </p>
+                    </div>
+
                 </div>
 
                 <!-- 个人特长卡片模块 -->
