--- a/index.html
+++ b/index.html
@@ -592,12 +592,20 @@
                 margin-bottom: 0.5rem; /* 底部外边距 */
             }
 
+            /* 工作经历和成果中的正文-描述样式 */
+            .info-description-1 {
+                font-size: 1.05rem; /* 字体大小 */
+                color: #1a202c; /* 字体颜色 黑色*/
+                line-height: 1.6; /* 行高 */
+            }
+
             /* 实习经历描述样式 */
             .info-description {
                 font-size: 1rem; /* 字体大小 */
                 color: #4a5568; /* 字体颜色 */
                 line-height: 1.6; /* 行高 */
             }
+
         </style>
     </head>
 
@@ -776,7 +784,14 @@
                         <div class="timeline-item">
                             <div class="timeline-date">2020.6 - 至今</div>
                             <h3 class="timeline-title">无锡先进技术研究院 - 技术研发副主管</h3>
-                            <br><p class="info-description">先后在语言编译研发部(编译工具链研发工程师)、生态软件研发部(基础软件研发工程师)两个部门工作, 完成申威GDB反向调试(Reverse Debugging)高级功能开发, 使SW64成为第4个成功支持的架构(仅次于x86/arm/ppc); 完成申威LLDB框架设计和功能代码编写, 从零突破首次实现SW64架构支持; 充分挖掘CPU硬件特性, 实现LLDB硬件观察点功能，匹配速度提升数十倍. 突破“调试工具+大模型”技术融合探索，实现AI赋能工作效率. 完成申威插桩工具Dyninst、图形化调优工具HPCToolkit研发; 带领新人完成申威Systemtap、Ltrace工具开发. 累计开展3次以调试调优为主题的技术培训授课，分享软件调试技巧，提升同事软件开发效率. 累计向申威社区、厂商、部门内外同事提供调试技术支持60+次，解决开发者用户遇到的调试难题80+项. 实现了取得了从“职场小白->技术骨干->牵头骨干”的个人进步和成长. 目前正带领3人开展申威AI芯片研发项目攻关，完成芯片调试和性能计数器功能验证, 已实现面向AI卡的debugger和profiler代码雏形.</p><br>
+                            <br><p class="info-description-1">先后在语言编译研发部(编译工具链研发工程师)、生态软件研发部(基础软件研发工程师)两个部门工作,
+                                完成申威GDB反向调试(Reverse Debugging)高级功能开发, 使SW64成为第4个成功支持的架构(仅次于x86/arm/ppc);
+                                完成申威LLDB框架设计和功能代码编写, 从零突破首次实现SW64架构支持; 充分挖掘CPU硬件特性, 实现LLDB硬件观察点功能，
+                                匹配速度提升数十倍. 突破“调试工具+大模型”技术融合探索，实现AI赋能工作效率. 完成申威插桩工具Dyninst、图形化调优工具HPCToolkit研发;
+                                带领新人完成申威Systemtap、Ltrace工具开发. 累计开展3次以调试调优为主题的技术培训授课，分享软件调试技巧，提升同事软件开发效率.
+                                累计向申威社区、厂商、部门内外同事提供调试技术支持60+次，解决开发者用户遇到的调试难题80+项.
+                                实现了取得了从“职场小白->技术骨干->牵头骨干”的个人进步和成长. 目前正带领3人开展申威AI芯片研发项目攻关，
+                                完成芯片调试和性能计数器功能验证, 已实现面向AI卡的debugger和profiler代码雏形.</p><br>
                             <ul class="custom-list">
                             <li>申威AI芯片“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
                             <li>1篇论文 <a href=https://hanxuliu.github.io/pdf-web/paper/gdb_reverse_debugging/index.html class="break-link">《面向申威平台的反向调试技术研究》</a></li>
